; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-stmp3xxx.c_stmp3xxx_rtc_set_mmss.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-stmp3xxx.c_stmp3xxx_rtc_set_mmss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.stmp3xxx_rtc_data = type { i64 }

@HW_RTC_SECONDS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i64)* @stmp3xxx_rtc_set_mmss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stmp3xxx_rtc_set_mmss(%struct.device* %0, i64 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.stmp3xxx_rtc_data*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.stmp3xxx_rtc_data* @dev_get_drvdata(%struct.device* %6)
  store %struct.stmp3xxx_rtc_data* %7, %struct.stmp3xxx_rtc_data** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load %struct.stmp3xxx_rtc_data*, %struct.stmp3xxx_rtc_data** %5, align 8
  %10 = getelementptr inbounds %struct.stmp3xxx_rtc_data, %struct.stmp3xxx_rtc_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @HW_RTC_SECONDS, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @__raw_writel(i64 %8, i64 %13)
  %15 = load %struct.stmp3xxx_rtc_data*, %struct.stmp3xxx_rtc_data** %5, align 8
  %16 = call i32 @stmp3xxx_wait_time(%struct.stmp3xxx_rtc_data* %15)
  ret i32 0
}

declare dso_local %struct.stmp3xxx_rtc_data* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @__raw_writel(i64, i64) #1

declare dso_local i32 @stmp3xxx_wait_time(%struct.stmp3xxx_rtc_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
